@@ -3382,6 +3382,11 @@ operator|.
 name|getValue
 argument_list|()
 decl_stmt|;
+name|boolean
+name|updateField
+init|=
+literal|false
+decl_stmt|;
 if|if
 condition|(
 literal|"add"
@@ -3392,6 +3397,10 @@ name|key
 argument_list|)
 condition|)
 block|{
+name|updateField
+operator|=
+literal|true
+expr_stmt|;
 name|oldDoc
 operator|.
 name|addField
@@ -3421,6 +3430,10 @@ name|key
 argument_list|)
 condition|)
 block|{
+name|updateField
+operator|=
+literal|true
+expr_stmt|;
 name|oldDoc
 operator|.
 name|setField
@@ -3450,6 +3463,10 @@ name|key
 argument_list|)
 condition|)
 block|{
+name|updateField
+operator|=
+literal|true
+expr_stmt|;
 name|SolrInputField
 name|numericField
 init|=
@@ -3690,6 +3707,39 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|// validate that the field being modified is not the id field.
+if|if
+condition|(
+name|updateField
+operator|&&
+name|idField
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|sif
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Invalid update of id field: "
+operator|+
+name|sif
+argument_list|)
+throw|;
 block|}
 block|}
 block|}
