@@ -22,144 +22,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|MockAnalyzer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|Field
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|FieldType
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|DocIdSetIterator
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|TermQuery
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|Directory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|BytesRef
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|noggit
-operator|.
-name|ObjectBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -177,48 +39,6 @@ operator|.
 name|common
 operator|.
 name|SolrException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|SolrInputDocument
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|request
-operator|.
-name|SolrQueryRequest
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|TestHarness
 import|;
 end_import
 
@@ -246,103 +66,11 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|concurrent
 operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|atomic
-operator|.
-name|AtomicInteger
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|atomic
-operator|.
-name|AtomicLong
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|locks
-operator|.
-name|Lock
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|locks
-operator|.
-name|ReentrantLock
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|core
-operator|.
-name|SolrCore
-operator|.
-name|verbose
+name|Callable
 import|;
 end_import
 
@@ -1370,6 +1098,191 @@ literal|"id,val*"
 argument_list|)
 argument_list|,
 literal|"=={'doc':{'id':'1', 'val_i':5, 'val_is':[1999999996], 'val2_i':-2000000004, 'val2_f':1.0E20, 'val2_d':-1.2345678901e+100, 'val2_l':4999999996}}"
+argument_list|)
+expr_stmt|;
+comment|// remove some fields
+name|version
+operator|=
+name|addAndGetVersion
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"val_is"
+argument_list|,
+name|map
+argument_list|(
+literal|"set"
+argument_list|,
+literal|null
+argument_list|)
+argument_list|,
+literal|"val2_f"
+argument_list|,
+name|map
+argument_list|(
+literal|"set"
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|afterUpdate
+operator|.
+name|call
+argument_list|()
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/get"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,val*"
+argument_list|)
+argument_list|,
+literal|"=={'doc':{'id':'1', 'val_i':5, 'val2_i':-2000000004, 'val2_d':-1.2345678901e+100, 'val2_l':4999999996}}"
+argument_list|)
+expr_stmt|;
+comment|// test that updating a unique id results in failure.
+try|try
+block|{
+name|ignoreException
+argument_list|(
+literal|"Invalid update of id field"
+argument_list|)
+expr_stmt|;
+name|version
+operator|=
+name|addAndGetVersion
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+name|map
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|,
+literal|"val_is"
+argument_list|,
+name|map
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|"2000000000"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|se
+parameter_list|)
+block|{
+name|resetExceptionIgnores
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|400
+argument_list|,
+name|se
+operator|.
+name|code
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|se
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|"Invalid update of id field"
+argument_list|)
+operator|>=
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+name|afterUpdate
+operator|.
+name|call
+argument_list|()
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/get"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,val*"
+argument_list|)
+argument_list|,
+literal|"=={'doc':{'id':'1', 'val_i':5, 'val2_i':-2000000004, 'val2_d':-1.2345678901e+100, 'val2_l':4999999996}}"
+argument_list|)
+expr_stmt|;
+comment|// nothing should have changed - check with a normal query that we didn't create a duplicate
+name|assertU
+argument_list|(
+name|commit
+argument_list|(
+literal|"softCommit"
+argument_list|,
+literal|"false"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==1"
 argument_list|)
 expr_stmt|;
 block|}
